Fix Deprecated methods for removal