@@ -231,14 +231,14 @@ public final class BPMNHelper {
 				.find()
 				.andWhere("processId", "=",Core.isNotNull(processDefinition)?processDefinition:"-1")
 				.andWhere("taskId", "=",Core.isNotNull(taskDefinition)?taskDefinition:"-1")
-				.andWhere("status", "=",new Integer(1))
+				.andWhere("status", "=",Integer.valueOf(1))
 				.andWhere("tipo", "=","OUT")
 				.andWhere("repTemplate", "notnull")
 				.andWhere("repTemplate.application.dad", "=",taskDad)
 				.all();		
 		for(TipoDocumentoEtapa t : tipoDocs) { 
 			RuntimeTask runtimeTask = RuntimeTask.getRuntimeTask(); 
-			t.setFileId(new Integer(-1));
+			t.setFileId(Integer.valueOf(-1));
 			nosi.core.webapp.Report r = Core.getLinkReport(t.getRepTemplate().getCode()); 
 			List<RepTemplateSource> allDataSources = new RepTemplateSource().find().andWhere("repTemplate", "=", t.getRepTemplate()).all(); 
 			String p_task_id = "";  
